--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  0.2510814816028888 \ty:  0.12648070731844185\n"
+      "x:  0.40054413955272905 \ty:  0.12917129258196652\n"
      ]
     }
    ],
@@ -260,9 +260,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set Zero Stepper\n",
+      "Ending Zero Stepper\n",
+      "y: 0.10293487594029405  yn:  0.10973653569131067  diff:  0.0068016597510166255\n",
+      "y: 0.10973653569131067  yn:  0.11808244888173866  diff:  0.00834591319042799\n",
+      "y: 0.11985094303527163  yn:  0.13121989966628153  diff:  0.011368956631009897\n",
+      "y: 0.13121989966628153  yn:  0.14024064237103856  diff:  0.009020742704757029\n",
+      "y: 0.14024064237103856  yn:  0.15152380967377732  diff:  0.011283167302738761\n",
+      "y: 0.15152380967377732  yn:  0.160766966882703  diff:  0.009243157208925684\n",
+      "y: 0.160766966882703  yn:  0.171429147189254  diff:  0.010662180306551\n",
+      "y: 0.171429147189254  yn:  0.17182747115378078  diff:  0.00039832396452677\n",
+      "y: 0.18285840508960965  yn:  0.19268484156656768  diff:  0.009826436476958023\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Set Zero Stepper\")\n",
     "FB = serS.read_all()\n",
@@ -392,14 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<0>\" but task was already closed.\n",
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<D4>\" but task was already closed.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -410,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +436,7 @@
      "output_type": "stream",
      "text": [
       "Starting Enter Motors\n",
-      "[-0.10350478771352732, -0.07693746227472478, 0.15546013795073446, -0.1533385222075104, -0.035344011342818386, -0.09966167123140064]\n"
+      "[-0.14900575597019558, -0.04983938662925224, 0.17344029994008467, -0.16879185784036063, -0.036677010118877466, -0.12731380662080538]\n"
      ]
     }
    ],
@@ -493,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -788,11 +806,13 @@
     }
    ],
    "source": [
-    "Folder = \"X025\"\n",
+    "Folder = \"X040\"\n",
     "torque_mag = 2\n",
     "torque_settings = [[0, torque_mag], [torque_mag, 0], [torque_mag, torque_mag],\n",
     "                   [0, -torque_mag], [-torque_mag, 0], [-torque_mag, -torque_mag]]\n",
     "\n",
+    "\n",
+    "Y_Pos_Record = [10,13,16,19]\n",
     "\n",
     "print(\"Set Zero Stepper\")\n",
     "\n",
@@ -817,7 +837,7 @@
     "\n",
     "while count < total_count+1:\n",
     "\n",
-    "    count+=1\n",
+    "    \n",
     "\n",
     "    command1 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
     "    command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
@@ -841,10 +861,9 @@
     "            df_log[log_COLUMNS[i]] = log_arrays_transpose[i]\n",
     "\n",
     "        # print(df_log)\n",
-    "        y = round(df_log[\"y\"].mean()*100)\n",
-    "        df_log.to_csv(f\"Record_Data/{Folder}/Y{y}_T{session[0]}{session[1]}_Static.csv\")\n",
+    "        df_log.to_csv(f\"Record_Data/{Folder}/Y{Y_Pos_Record[count]}_T{session[0]}{session[1]}_Static.csv\")\n",
     "\n",
-    "\n",
+    "    count+=1\n",
     "    if count > total_count:\n",
     "        break\n",
     "    \n",
@@ -885,9 +904,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 283,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<D4>\" but task was already closed.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "serS.write(b'2')\n",
     "\n",
