--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  0.25166900055990765 \ty:  0.1742840859793484\n"
+      "x:  0.40036437508951683 \ty:  0.19212350288818236\n"
      ]
     }
    ],
@@ -425,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<32>\" but task was already closed.\n",
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<11A>\" but task was already closed.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
      "output_type": "stream",
      "text": [
       "Starting Enter Motors\n",
-      "[-0.12336207390369053, -0.08656107773806912, -0.13671236238658593, -0.05789237269978997, 0.20879452898818912, 0.02480995372926002]\n"
+      "[-0.1475847694801856, -0.16125246165690152, -0.1837974530157206, -0.10029349178135509, 0.27780491130677437, -0.015658685041892967]\n"
      ]
     }
    ],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -799,24 +799,95 @@
       "Start Controling\n",
       "finishing T1 = 2 and T2 = 0\n",
       "Starting T1 = 2 and T2 = 2\n",
-      "Start Controling\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'vel1' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[96], line 46\u001b[0m\n\u001b[0;32m     43\u001b[0m sleep(\u001b[39m2\u001b[39m)\n\u001b[0;32m     45\u001b[0m \u001b[39mfor\u001b[39;00m session \u001b[39min\u001b[39;00m torque_settings:\n\u001b[1;32m---> 46\u001b[0m     logs \u001b[39m=\u001b[39m record_session(session[\u001b[39m0\u001b[39;49m], session[\u001b[39m1\u001b[39;49m])\n\u001b[0;32m     47\u001b[0m     log_COLUMNS \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mTime\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mT1\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mT2\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mt1\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mt2\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mq1\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mq2\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mx_dot\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39my_dot\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFx\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFy\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFx_Mea\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFy_Mea\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m     49\u001b[0m     log_arrays \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([np\u001b[39m.\u001b[39marray(item) \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m logs])\n",
-      "Cell \u001b[1;32mIn[95], line 144\u001b[0m, in \u001b[0;36mrecord_session\u001b[1;34m(T1, T2)\u001b[0m\n\u001b[0;32m    139\u001b[0m log\u001b[39m.\u001b[39mappend(y)\n\u001b[0;32m    141\u001b[0m \u001b[39m# print(\"x: \",x, \"\\ty: \", y)\u001b[39;00m\n\u001b[1;32m--> 144\u001b[0m x_dot \u001b[39m=\u001b[39m l1\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39mcos(q1)\u001b[39m*\u001b[39mvel1 \u001b[39m-\u001b[39m l2\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39msin(q2)\u001b[39m*\u001b[39mvel2\n\u001b[0;32m    145\u001b[0m y_dot \u001b[39m=\u001b[39m \u001b[39m-\u001b[39ml1\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39msin(q1)\u001b[39m*\u001b[39mvel1 \u001b[39m-\u001b[39m l2\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39mcos(q2)\u001b[39m*\u001b[39mvel2\n\u001b[0;32m    148\u001b[0m log\u001b[39m.\u001b[39mappend(x_dot)\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'vel1' referenced before assignment"
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 2\n",
+      "Starting T1 = 0 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = -2\n",
+      "Starting T1 = -2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = 0\n",
+      "Starting T1 = -2 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = -2\n",
+      "Starting T1 = 0 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = 2\n",
+      "Starting T1 = 2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 0\n",
+      "Starting T1 = 2 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 2\n",
+      "Starting T1 = 0 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = -2\n",
+      "Starting T1 = -2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = 0\n",
+      "Starting T1 = -2 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = -2\n",
+      "Starting T1 = 0 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = 2\n",
+      "Starting T1 = 2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 0\n",
+      "Starting T1 = 2 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 2\n",
+      "Starting T1 = 0 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = -2\n",
+      "Starting T1 = -2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = 0\n",
+      "Starting T1 = -2 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = -2\n",
+      "Starting T1 = 0 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = 2\n",
+      "Starting T1 = 2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 0\n",
+      "Starting T1 = 2 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 2\n",
+      "Starting T1 = 0 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = -2\n",
+      "Starting T1 = -2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = 0\n",
+      "Starting T1 = -2 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = -2\n",
+      "Starting T1 = 0 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = 2\n",
+      "Starting T1 = 2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 0\n",
+      "Starting T1 = 2 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 2\n",
+      "Starting T1 = 0 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = -2\n",
+      "Starting T1 = -2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = 0\n",
+      "Starting T1 = -2 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = -2\n",
+      "End all session\n"
      ]
     }
    ],
    "source": [
-    "Folder = \"X25\"\n",
+    "Folder = \"X40\"\n",
     "torque_mag = 2\n",
     "torque_settings = [[0, torque_mag], [torque_mag, 0], [torque_mag, torque_mag],\n",
     "                   [0, -torque_mag], [-torque_mag, 0], [-torque_mag, -torque_mag]]\n",
@@ -915,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
